Started updating bridge scripts for SU6

--- a/fs-package/PackageSources/html_ui/Pages/VCockpit/Core/VCockpit.html
+++ b/fs-package/PackageSources/html_ui/Pages/VCockpit/Core/VCockpit.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="/Pages/VCockpit/Instruments/Shared/BaseInstrument.js"></script>
     <script type="text/javascript" src="/Pages/VCockpit/Instruments/Shared/Utils/XMLLogic.js"></script>
     <script type="text/javascript" src="VCockpit.js"></script>
-    <script type="text/javascript" src="/davux/InGameLoader.js?bust=aa"></script>
+    <script type="text/javascript" src="/davux/InGameLoader.js"></script>
 
 </head>
 
