--- a/fs-package/PackageSources/ExternalPackages/fs-gauge-bridge/html_ui/Pages/VCockpit/Core/VCockpit.html
+++ b/fs-package/PackageSources/ExternalPackages/fs-gauge-bridge/html_ui/Pages/VCockpit/Core/VCockpit.html
@@ -14,7 +14,6 @@
     <script type="text/javascript" src="/davux/SimVarBridge.js"></script>
     <script type="text/javascript" src="/JS/simvar.js"></script>
     <script type="text/javascript" src="/JS/avionics.js"></script>
-    <script type="text/javascript" src="/JS/simplane.js"></script>
 
     <script type="text/javascript" src="/Pages/VCockpit/Instruments/Shared/Utils/DataReadManager.js"></script>
     <script type="text/javascript" src="/Pages/VCockpit/Instruments/Shared/BaseInstrument.js"></script>
@@ -22,12 +21,11 @@
 
     <script type="text/javascript" src="VCockpit.js"></script>
     <script type="text/javascript" src="/davux/VCockpitExternal.js"></script>
-    <script type="text/javascript" src="/davux/CommLinkExternal.js"></script>
-    <script type="text/javascript" src="/davux/fs9gps.js"></script>
     <script type="text/javascript" src='/davux/sqljs/sql-wasm.js'></script>
 </head>
 
 <body>
     <div id="main_panel"></div>
+    <p>Hello</p>
 </body>
 </html>
